apps/payment/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment
  labels:
    app: payment
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - payment.wolfixsite.shop
    secretName: payment-tls
  rules:
  - host: payment.wolfixsite.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 80
